# copl-interpreter

./: README.md
EvalML3/lib/: derive.ml  lexer.mll
EvalML4/: copl.opam
EvalML4/lib/: derive.ml  eval.ml  parser.mly  syntax.ml
EvalML4/test/: dune
EvalML5/lib/: derive.ml  eval.ml  lexer.mll  match.ml  parser.mly  syntax.ml
TypingML4/: dune-project
TypingML4/lib/: cui.ml  derive.ml  eval.ml  lexer.mll  parser.mly  syntax.ml  typing.ml
lib/: cui.ml  derive.ml  dune  eval.ml  parser.mly  syntax.ml
src/: cui.ml  derive.ml  dune  environment.ml  eval.ml  lexer.mll  main.ml  parser.mly  syntax.ml  typing.ml
