(lang dune 3.3)

(name copl)

(generate_opam_files true)

(source
 (github artoy/copl-interpreter))

(authors "artoy")

(maintainers "artoy")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name copl)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

(using menhir 2.1)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
